# RAKUTEN_Project

./: .continueignore  .gitignore  README.md  README_automate_setup.md  README_setup.md  file_list.txt  pyproject.toml  requirements.txt  requirements2.txt  requirements_linux_macos.txt  requirements_temp.txt  requirements_win.txt  setup_data.py  watch_docker_changes.py  watchmedo.sh
.github/workflows/: ci-cd.yml  python-app.yml  test.yml
db/: db_connection.py
docker/: .dockerignore  Dockerfile.api  README.md  airflow.Dockerfile  api.Dockerfile  docker-compose.dev.yaml  docker-compose.prod.yaml  docker-compose.staging.yaml  docker-compose.testapp.yaml  docker-compose.yaml  docker_cleanup.sh  mlflow-ui.Dockerfile
docker/dags/: build_features.py  change_model_by_github.py  check_structure.py  data_labeling_Dag.py  deploy_code_update.py  import_raw_data.py  make_dataset.py
docker/docker/: prometheus.yml
docker/docker-compose/: docker-compose.dev.yaml  docker-compose.prod.yaml  docker-compose.staging.yaml  docker-compose.testapp.yaml
docker/dockerfile/: api.Dockerfile
models/: best_weights.pkl  mapper.json  tokenizer_config.json
notebooks/: Rakuten.ipynb  data.ipynb
src/: predict.py
src/api/: api_documentation.txt  app.py  auth.py  automate_setup.sh  users.py
src/api/routes/: model.py
src/config/: mongodb.py
src/data/: import_raw_data.py  make_dataset.py
src/old_api/: app.py
src/old_api/models/: user.py
src/scripts/: __init__.py  main.py  predict.py
src/scripts/data/: gridfs_image_handler.py  import_raw_data.py  make_dataset.py  mongodb_data_loader.py  setup_data_cloud.py
src/scripts/features/: build_features.py
src/scripts/models/: train_model.py
tests/integration/: integration_test_mlflow.py  test_integration.py
tests/integration/api/: conftest.py  test_app.py
tests/integration/api/data_routes/: test_prepare_data.py
tests/unit/: test_api.py  test_auth.py  test_db_connection.py  test_logs.py  test_metrics.py  test_mlflow.py  test_models.py  test_performance.py  test_predict.py  test_train.py
tests/unit/scripts/data/: test_check_structure.py  test_import_raw_data.py  test_make_dataset.py
tests/unit/scripts/features/: test_unit_build_features.py
